changes in code

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <!--Package Section-->
 
         
-        <section class="container" id="package" data-aos="fade-right" data-aos-duration="1000" data-aos-once="false">
+        <section class="package-container" id="package" data-aos="fade-right" data-aos-duration="1000" data-aos-once="false">
             <div class="title">
                 <h2>Our Upcoming <br> Tour Package</h2>
             </div>
