--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navbar">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#package">Package</a></li>
-            <li><a href="#destination">Destination</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a class="nav-btn" href="#home">Home</a></li>
+            <li><a class="nav-btn" href="#package">Package</a></li>
+            <li><a class="nav-btn" href="#destination">Destination</a></li>
+            <li><a class="nav-btn" href="#contact">Contact Us</a></li>
         </ul>
 
 
@@ -273,7 +273,7 @@
                             <i class='bx bx-check-double'></i>
                             <p>Treasure Mountain activities include Spiders Web high ropes obstacle course, the whole course, and the High Swing. Also, they offer biking activities, waterfall chasing, overnight camping, and car glamping activity. </p>
                             <i class='bx bx-check-double'></i>
-                            <p>Treasure Mountain has an effortless sea of clouds. There’s no need to do a taxing hike that people normally go through to witness breathtaking views. Moreover, even if someone doesn’t get to experience the sea of clouds, the place offers an amazing view of nature and different activities for relaxation.  </p>
+                            <p>Treasure Mountain has an effortless sea of clouds. There’s no need to do a taxing hike that people normally go through to witness breathtaking views. Moreover, even if someone doesn’t get to experience the sea of clouds, the place offers an amazing view of nature and different activities for relaxation.</p>
                         </div>                    
                     </section>
                 </div>
